# qualifirst-rec

./: .env.example  embedding.jsonl  pyproject.toml  recommendation.ipynb
datas/: product-embedding.jsonl  sample_df.csv  shopify_products_embedding.jsonl
