[tool.poetry]
name = "jupyter workspace"
version = "0.1.0"
description = ""
authors = ["Bikin Shrestha <bikin@qodemedia.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.51.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.1.1"
python-dotenv = "^1.0.1"
shopifyapi = "^12.6.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
